Bug 220701 - link has a wrong format
Summary: link has a wrong format
Status: RESOLVED FIXED
Alias: None
Product: kword
Classification: Unmaintained
Component: opendocument (other bugs)
Version First Reported In: 2.1
Platform: openSUSE Unspecified
: NOR normal
Target Milestone: ---
Assignee: Thomas Zander
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-12-30 16:12 UTC by Silver Salonen
Modified: 2010-03-14 22:08 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
example of a link (15.39 KB, application/vnd.oasis.opendocument.text)
2009-12-30 16:13 UTC, Silver Salonen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Silver Salonen 2009-12-30 16:12:42 UTC
Version:           2.1.0 (using KDE 4.3.4)
Installed from:    openSUSE RPMs

I have an ODT document created in OOo 3.1 that has a link. In OOo the text doesn't have any decorations, but KOffice shows it in italics.
Comment 1 Silver Salonen 2009-12-30 16:13:26 UTC
Created attachment 39463 [details]
example of a link
Comment 2 Thomas Zander 2010-03-14 22:08:49 UTC
SVN commit 1103336 by zander:

Italics is not implied for hrefs

BUG:220701

 M  +0 -1      KoTextLoader.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1103336