Italics is not implied for hrefs

BUG:220701

svn path=/trunk/koffice/; revision=1103336